deployment/k8s-eks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: elastic-stack
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  rules:
  - host: elasticsearch.insightblue.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-es-http
            port:
              number: 9200
  tls:
  - hosts:
    - elasticsearch.insightblue.co
    secretName: elasticsearch-tls
